--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "fullstack automation with javascript",
   "main": "index.js",
   "scripts": {
-    "test:api": "mocha **/*.suite.js --reporter mochawesome"
+    "test:api": "mocha **/*.suite.js --reporter mochawesome",
+    "test:web": "wdio run ./wdio.web.conf.js",
+    "html-report:api": "open ./mochawesome-report/mochawesome.html",
+    "html-report:web": "open ./.tmp/report/index.html"
   },
   "repository": {
     "type": "git",
@@ -20,7 +23,6 @@
   },
   "homepage": "https://github.com/alvintri/automation-javascript#readme",
   "devDependencies": {
-    "@wdio/allure-reporter": "^8.1.2",
     "@wdio/appium-service": "^8.1.3",
     "@wdio/cli": "^8.10.0",
     "@wdio/cucumber-framework": "^8.1.2",
@@ -29,7 +31,6 @@
     "@wdio/local-runner": "^8.1.3",
     "@wdio/sauce-service": "^8.1.3",
     "@wdio/spec-reporter": "^8.1.2",
-    "allure-commandline": "^2.20.1",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
     "jsonschema": "^1.4.1",
@@ -39,6 +40,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "wdio-chromedriver-service": "^8.0.1",
+    "wdio-cucumberjs-json-reporter": "^5.0.3",
     "wdio-wait-for": "^3.0.1",
     "webdriverio": "^8.1.3",
     "xunit-viewer": "^7.2.0"
@@ -46,6 +48,9 @@
   "dependencies": {
     "@wdio/codemod": "^0.12.0",
     "chromedriver": "^112.0.1",
-    "jscodeshift": "^0.14.0"
+    "jscodeshift": "^0.14.0",
+    "multiple-cucumber-html-reporter": "^3.4.0",
+    "wdio-allure-reporter": "^0.8.3",
+    "wdio-html-nice-reporter": "^8.1.0"
   }
 }
