--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test:api": "mocha **/*.suite.js --reporter mochawesome",
     "test:web": "wdio run ./wdio.web.conf.js",
+    "test:mobile": "wdio run ./wdio.mobile.conf.js",
     "html-report:api": "open ./mochawesome-report/mochawesome.html",
-    "html-report:web": "open ./.tmp/report/index.html"
+    "html-report:web": "open ./.tmp/report/index.html",
+    "html-report:mobile": "open ./.tmp/report/index.html"
   },
   "repository": {
     "type": "git",
@@ -23,7 +25,7 @@
   },
   "homepage": "https://github.com/alvintri/automation-javascript#readme",
   "devDependencies": {
-    "@wdio/appium-service": "^8.1.3",
+    "@wdio/appium-service": "^8.10.0",
     "@wdio/cli": "^8.10.0",
     "@wdio/cucumber-framework": "^8.1.2",
     "@wdio/globals": "^8.1.3",
@@ -31,6 +33,7 @@
     "@wdio/local-runner": "^8.1.3",
     "@wdio/sauce-service": "^8.1.3",
     "@wdio/spec-reporter": "^8.1.2",
+    "appium": "^2.0.0-beta.46",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
     "jsonschema": "^1.4.1",
@@ -43,7 +46,8 @@
     "wdio-cucumberjs-json-reporter": "^5.0.3",
     "wdio-wait-for": "^3.0.1",
     "webdriverio": "^8.1.3",
-    "xunit-viewer": "^7.2.0"
+    "xunit-viewer": "^7.2.0",
+    "appium-uiautomator2-driver": "^2.1.2"
   },
   "dependencies": {
     "@wdio/codemod": "^0.12.0",
